# multirobot_stage

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/multirobot_stage/: NeuralNet.h  NeuroEvo.h  PolicyGrad.h  Utilities.h  conversions.h
launch/: action_node.launch  bouncer.launch  global_map_merge.launch  move_base.launch  multirobot_learning.launch  multirobot_map_merge.launch  multirobot_stage.launch  multirobot_stage.rviz  multirobot_stage_2.rviz  multirobot_stage_headless.launch  multirobot_static_transform.launch  rewards_node.launch  robot_costmap.launch  robot_costmap_params.yaml  robot_map_merge_params.yaml  robot_pedestrian_stage.rviz  robot_slam_dyn_obs_stage.rviz  single_action_node.launch  single_agent_policy.launch  single_global_odom_transform.launch  single_map_merge.launch  single_navigation.launch  single_rewards_node.launch  single_slam.launch
maps/: many_dots.yaml
msg/: RobotPosition.msg
scripts/: base_local_planner_params.yaml  global_costmap_params.yaml  global_map_merge_params.yaml  how-to-run-multi-robot-explore  initial_poses.yaml  learning_params.yaml  local_map_merge_params.yaml  run-agent-policies  run-cg-multi-robot-sim  run-multi-robot-explore  run-multi-robot-explore2  run-multi-robot-nav  run-multi-robot-sim  run-multi-robot-sim-nav  run-multi-terminal-multirobot-sim  run-robot-pedestrian-sim  run-single-robot-explore  run-single-robot-slam  run-single-robot-slam-dyn-obs  run-tsd-multi-robot-sim  terminate-ros-episode
scripts/evaluation/: plots.py
src/: AgentPolicy.h  CommsMap.h  GlobalOdom.h  action_node.cpp  action_node.h  agent_policy.cpp  bouncer.cpp  bouncer.h  comms_map.cpp  comms_node.cpp  comms_node.h  conversion_tester.cpp  conversions.h  exploration_rewards.cpp  exploration_rewards.h  global_odom.cpp  learner.cpp  learning_episode_timer.cpp  learning_episode_timer.h  map2polar.cpp  merged_map_republisher.cpp  multiRobotNE.cpp  multiRobotNE.h  multiRobotPG.cpp  multiRobotPG.h  multiRobotPG.py  robot_costmap.cpp  robot_costmap.h
worlds/: hg_e_small1.pgm  hg_e_small1.world  manyDots.world  map3.pgm  map3.world  map4.pgm  map4.world  map_abstract1.pgm  map_abstract1.world  small_office.world  willow_multi_robot.world
